syntax = "proto3";

package user.v1;

option go_package = "messaging-app/proto/user/v1;userv1";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {
  repeated string user_ids = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string avatar = 5;
  string bio = 6;
  string role = 7; // e.g., "user", "admin"
  bool is_verified = 8;
  PrivacySettings privacy_settings = 9;
}

message PrivacySettings {
    bool profile_visible = 1;
    bool search_visible = 2;
}
